TX-129 Fixed alignment of the 'when' field for surveys

--- a/health/sass/components/content-types/_survey.scss
+++ b/health/sass/components/content-types/_survey.scss
@@ -17,7 +17,8 @@
     .field-name-field-date-end,
     .field-name-field-time-required,
     .field-name-field-audience,
-    .field-name-ds-associated-release {
+    .field-name-ds-associated-release,
+    .field-name-ds-start-end-date-friendly {
       @extend %spaced-inline-label;
     }
 
